# pyrplidarsdk

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: pypi.yml
examples/: realtime_plot.py  simple_scan.py
src/: rplidar_wrapper.cpp
